Update logo image styles in custom CSS with new class names

--- a/assistant/public/custom.css
+++ b/assistant/public/custom.css
@@ -1,13 +1,13 @@
 /*Increase the size of the Logo*/
-.css-145bayk img {
-  max-height: 40px !important;
-}
-
-.css-1i3rg7m img {
-  max-height: 40px !important;
-}
-
 .css-14k6mw7 img {
+  max-height: 40px !important;
+}
+
+.css-1kcynaz img {
+  max-height: 40px !important;
+}
+
+.css-rm1h2r img {
   max-height: 40px !important;
 }
 
